minor css validation corrections

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <body>
         <header>
             <a id="menu" href="#" title="Navigation Menu"></a>
-            <h1 class="nav-image"><img class="author" src="images/albertpessima.png" alt="albert pessima"><span
-                    class="name">Albert U. Pessima</span></h1>
+            <div class="nav-image"><img class="author" src="images/albertpessima.png" alt="albert pessima"><span
+                    class="name">Albert U. Pessima</span></div>
             
             <nav class="nav-links">
                 <ul class="navigation">
