add social media meta tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <meta name="description"
             content="WDD 231 - Web Fronted Development 1, Albert Pessima, a web page as part of week one assignments">
         <meta name="author" content="Course Home Page">
+        <meta property="og:title" content="Web Fronted Development Course Project Page">
+        <meta property="og:type" content="Education">
+        <meta property="og:images" content=""> 
+        <meta property="og:url" content=" https://pessima-au.github.io/wdd231/">
+
 
         <title>WDD 231 - Web Fronted Development 1 - Albert Pessima</title>
         <link rel="stylesheet" href="styles/normalize.css">
@@ -23,6 +28,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap"
             rel="stylesheet">
+        <link rel="icon" href="./favicon.ico">
     </head>
 
     <body>
