added meta image absolute path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Course Home Page">
         <meta property="og:title" content="Web Fronted Development Course Project Page">
         <meta property="og:type" content="Education">
-        <meta property="og:images" content=""> 
+        <meta property="og:images" content="https://github.com/pessima-au/wdd231/blob/main/images/freetown_sl.png"> 
         <meta property="og:url" content=" https://pessima-au.github.io/wdd231/">
 
 
