--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
-            content="WDD 231 - Web Fronted Development 1, Albert Pessima, a web page as part of week one assignments">
+            content="WDD 231 - Web Frontend Development 1, Albert Pessima, a web page as part of week one assignments">
         <meta name="author" content="Course Home Page">
-        <meta property="og:title" content="Web Fronted Development Course Project Page">
-        <meta property="og:type" content="Education">
-        <meta property="og:images" content="https://github.com/pessima-au/wdd231/blob/main/images/freetown_sl.png"> 
-        <meta property="og:url" content=" https://pessima-au.github.io/wdd231/">
+        <meta property="og:title" content="Web Frontend Development Course Project Page">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://raw.githubusercontent.com/pessima-au/wdd231/main/images/freetown_sl.png">
+        <meta property="og:url" content="https://pessima-au.github.io/wdd231/">
 
 
         <title>WDD 231 - Web Fronted Development 1 - Albert Pessima</title>
@@ -36,7 +36,7 @@
             <a id="menu" href="#" title="Navigation Menu"></a>
             <div class="nav-image"><img class="author" src="images/albertpessima.png" alt="albert pessima"><span
                     class="name">Albert U. Pessima</span></div>
-            
+
             <nav class="nav-links">
                 <ul class="navigation">
                     <li><a href="index.html">Home</a></li>
