add meta tag  for twitter/x

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         <meta property="og:image" content="https://raw.githubusercontent.com/pessima-au/wdd231/main/images/freetown_sl.png">
         <meta property="og:url" content="https://pessima-au.github.io/wdd231/">
 
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="@pepsiumar"/>
+        <meta name="twitter:title" content="WDD 231 - Web Frontend Development 1 - Albert Pessima" />
+        <meta name="twitter:description" content="A view of Freetown close to my home" />
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/pessima-au/wdd231/main/images/freetown_sl.png" />
 
-        <title>WDD 231 - Web Fronted Development 1 - Albert Pessima</title>
+
+        <title>WDD 231 - Web Frontend Development 1 - Albert Pessima</title>
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/small.css" media="screen and (max-width: 768px)">
         <link rel="stylesheet" href="styles/large.css" media="screen and (min-width: 769px)">
