upload of photos

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,18 +13,16 @@
             content="https://raw.githubusercontent.com/pessima-au/wdd231/main/images/freetown_sl.png">
         <meta property="og:url" content="https://pessima-au.github.io/wdd231/">
 
-        <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:site" content="@pepsiumar" />
-        <meta name="twitter:title" content="WDD 231 - Web Frontend Development 1 - Albert Pessima" />
-        <meta name="twitter:description" content="A view of Freetown close to my home" />
-        <meta name="twitter:image"
-            content="https://raw.githubusercontent.com/pessima-au/wdd231/main/images/freetown_sl.png" />
         <link rel="icon" href="./images/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
             rel="stylesheet">
+        <link rel="stylesheet" href="./styles/normalize.css">
+        <link rel="stylesheet" href="./styles/base.css">
+        <link rel="stylesheet" href="./styles/large.css">
+        <script src="./scripts/directory.js" defer></script>
 
         <title>Sierra Leone Chamber of Commerce</title>
     </head>
