--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,12 +13,19 @@
             content="https://raw.githubusercontent.com/pessima-au/wdd231/main/images/freetown_sl.png">
         <meta property="og:url" content="https://pessima-au.github.io/wdd231/">
 
+        <link rel="preload"
+            href="https://fonts.gstatic.com/s/roboto/v47/KFOMCnqEu92Fr1ME7kSn66aGLdTylUAMQXC89YmC2DPNWubEbVn6iAr0klQmz24O0g.woff2"
+            as="font" type="font/woff2" crossorigin>
+        <link rel="preload"
+            href="https://fonts.gstatic.com/s/montserrat/v29/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCtr6Hw5aXp-p7K4KLg.woff2"
+            as="font" type="font/woff2" crossorigin>
+
         <link rel="icon" href="./images/favicon.ico">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="./styles/base.css">
         <link rel="stylesheet" href="./styles/large.css">
@@ -62,10 +69,10 @@
         <footer>
             <div class="address">
                 <h2>Sierra Leone Chamber of Commerce</h2>
-                    <p>1 Short Street</p>
-                    <p>Freetown, Sierra Leone</p>
-                    <p>info@slcm.org</p>
-                    <p>+232-76-123-456</p>
+                <p>1 Short Street</p>
+                <p>Freetown, Sierra Leone</p>
+                <p>info@slcm.org</p>
+                <p>+232-76-123-456</p>
             </div>
             <div class="social">
                 <ul>
