--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,7 +11,7 @@
         <meta property="og:type" content="website">
         <meta property="og:image"
             content="./images/freetown.webp">
-        <meta property="og:url" content="./directory.html">
+        <meta property="og:url" content="/wdd231/chamber/directory.html">
 
         <link rel="preload"
             href="https://fonts.gstatic.com/s/roboto/v47/KFOMCnqEu92Fr1ME7kSn66aGLdTylUAMQXC89YmC2DPNWubEbVn6iAr0klQmz24O0g.woff2"
@@ -77,14 +77,14 @@
             <div class="social">
                 <ul>
                     <li><a href="https://www.facebook.com/sierraleonechamberofcommerce" target="_blank">
-                            <img src="images/facebook-square-brands-solid.svg" alt="Facebook logo" width="40"
+                            <img src="images/facebook-logo.svg" alt="Facebook logo" width="40"
                                 height="40">
                         </a></li>
                     <li><a href="https://Youtube.com/slcc_chamber" target="_blank">
-                            <img src="images/youtube-square-brands-solid.svg" alt="Youtube logo" width="40" height="40">
+                            <img src="images/youtube-logo.svg" alt="Youtube logo" width="40" height="40">
                         </a></li>
                     <li><a href="https://www.linkedin.com/company/sierra-leone-chamber-of-commerce/" target="_blank">
-                            <img src="images/linkedin-brands-solid.svg" alt="Linkedin logo" width="40" height="40">
+                            <img src="images/linkedin-logo.svg" alt="Linkedin logo" width="40" height="40">
                         </a></li>
                 </ul>
             </div>
