--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,8 +10,8 @@
         <meta property="og:title" content="Web Frontend Development Course Project Page">
         <meta property="og:type" content="website">
         <meta property="og:image"
-            content="./images/freetown.webp">
-        <meta property="og:url" content="/wdd231/chamber/directory.html">
+            content="https://github.com/pessima-au/wdd231/raw/main/chamber/images/freetown.webp">
+        <meta property="og:url" content="https://github.com/pessima-au/wdd231/blob/main/chamber/directory.html">
         <link rel="preload"
             href="https://fonts.gstatic.com/s/roboto/v47/KFOMCnqEu92Fr1ME7kSn66aGLdTylUAMQXC89YmC2DPNWubEbVn6iAr0klQmz24O0g.woff2"
             as="font" type="font/woff2" crossorigin>
