Modified button element

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,7 +61,7 @@
         <main id="home-page">
             <section class="hero">
                 <img src="./images/freetown.webp" alt="">
-                <button ><a class="cta-button" href="https://example.com">Keynote Tickets</a></button>
+                <a class="cta-button" href="https://example.com">Keynote Tickets</a>
             </section>
             <h1>Home</h1>
             <section id="weather">
