--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <nav class="nav-links">
                 <ul class="navigation">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="./chamber/directory.html" target="_blank">Chamber</a></li>
+                    <li><a href="./chamber/index.html" target="_blank">Chamber</a></li>
                     <li><a href="https://github.com/pessima-au" target="_blank">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/albert-pessima" target="_blank">LinkedIn</a></li>
                 </ul>
