Added dialog to home page

--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
                     <button type="button" class="cse">CSE</button>
                     <button type="button" class="wdd">WDD</button>
                 </div>
-                <div id="courses">
-
-                </div>
+                <div id="courses"></div>
             </section>
+            <dialog id="course-details"></dialog>
         </main>
         <footer>
             <p>©<span id="currentYear"></span> | Albert Pessima | Sierra Leone <img src="images/sierra-leone-flag.png"
