--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -27,12 +27,13 @@
         <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="styles/base.css" media="print" onload="this.onload=null;this.media='all';">
         <link rel="stylesheet" href="styles/large.css" media="print" onload="this.onload=null;this.media='all';">
+        <link rel="stylesheet" href="styles/thankyou.css" media="print" onload="this.onload=null;this.media='all';">
 
         <link rel="preload" href="./images/slcc-logo.webp" as="image">
         <script src="./scripts/theme.js" defer></script>
-        <script src="./scripts/directory.js" defer></script>
+        <script src="./scripts/thankyou.js" defer></script>
 
-        <title>Sierra Leone Chamber of Commerce - Directory of Businesses</title>
+        <title>Form Submission - Thank you</title>
 
     </head>
 
@@ -50,21 +51,18 @@
                 </a>
             </div>
             <nav class="navigation">
-
-                <a href="./index.html">Home</a>
-                <a href="./directory.html" class="active">Directory</a>
+                <a href="index.html" class="active">Home</a>
+                <a href="./directory.html">Directory</a>
                 <a href="./join.html">Join</a>
                 <a href="#">Discover</a>
             </nav>
             <div id="theme" class="theme-toggle"></div>
         </header>
         <main>
-            <h1 class="main-header">Directory of Businesses</h1>
-            <div id="view-buttons">
-                <button id="grid" aria-label="Switch to grid view">⏹️Grid</button>
-                <button id="list" aria-label="Switch to list view">📄List</button>
-            </div>
-            <div id="cards" class="grid"></div>
+            <p>Thank you for your desire to join the Sierra Leone Chamber of Commerce!</p>
+            <P>You will hear from us in five (5) days.</P>
+            
+            <div id="data-display"></div>
         </main>
         <footer>
             <div class="address">
@@ -77,8 +75,7 @@
             <div class="social">
                 <ul>
                     <li><a href="https://www.facebook.com/sierraleonechamberofcommerce" target="_blank">
-                            <img src="images/facebook-logo.svg" alt="Facebook logo" width="40"
-                                height="40">
+                            <img src="images/facebook-logo.svg" alt="Facebook logo" width="40" height="40">
                         </a></li>
                     <li><a href="https://Youtube.com/slcc_chamber" target="_blank">
                             <img src="images/youtube-logo.svg" alt="Youtube logo" width="40" height="40">
