slashes remove from thanyou.html link

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,7 +61,7 @@
         <main id="join-page">
             <section id="membership-form">
                 <h1>Fill Membership Form</h1>
-                <form action="./thankyou.html" method="GET">
+                <form action="thankyou.html" method="GET">
                     <p id="first-p">All fields with * are required.</p>
                     <div>
                         <label for="first_name"><span>First name </span><span aria-label="required">*</span>
