--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,7 +60,7 @@
         </header>
         <main id="home-page">
             <section class="hero">
-                <img src="./images/freetown.webp" alt="">
+                <img src="./images/freetown.webp" alt="freetown" width="800" height="600" loading="lazy">
                 <a class="cta-button" href="https://example.com">Keynote Tickets</a>
             </section>
             <h1>Home</h1>
